work in progress

--- a/macros.tex
+++ b/macros.tex
@@ -1,9 +1,9 @@
-%demi 1/4th size
 \usepackage[papersize={215mm,280mm},
 topmargin=20mm,botmargin=20mm,leftmargin=20mm,rightmargin=20mm,
 headheight=5mm,headsep=5mm,footskip=6mm,cropmarks,nopagenumbers]{zwpagelayout}
 \usepackage{hyphenat}
 %\def\-{-\penalty0\hskip0pt\relax}
+\usepackage{epsfig,graphicx}
 
 \usepackage{textpos}
 
@@ -20,6 +20,16 @@ headheight=5mm,headsep=5mm,footskip=6mm,cropmarks,nopagenumbers]{zwpagelayout}
 %~ }}
 %~ 
 %~ \makeatother
+
+\def\@makeschapterhead#1{%
+  \vspace*{50\p@}%
+  {\parindent \z@ \raggedright
+    \normalfont
+    \interlinepenalty\@M
+    \Huge \bfseries  #1\par\nobreak
+    \vskip 40\p@
+  }}
+%raghu
 
 \newcounter{num}
 \newcounter{expnum}
