--- a/tex-for-print/anubandha-2.tex
+++ b/tex-for-print/anubandha-2.tex
@@ -4,120 +4,95 @@
 \rhead[]{}
 
 \begin{center}
-{\large\bf viVrasheYva pAriBASika kananxDa padakoVsha saMpuTakekx padasaMgarxha\break mADikoTiTxruva vidAvxMsarugaLa vivara}
+{\large\bf padasaMgarxha mADikoTiTxruva vidAvxMsarugaLa vivara}
 \end{center}
 
+\vskip -.5cm
+
 {\renewcommand{\arraystretch}{1.4}
-\begin{longtable}{|r|p{10cm}|}
+%\begin{longtable}{|r|p{10cm}|}
+\begin{longtable}{rl}
 \hline
-{\bf karx.saM.} & \multicolumn{1}{c|}{\bf vidAvxMsara hesaru}\\
+{\bf karx.saM.} & \multicolumn{1}{c}{\bf vidAvxMsara hesaru}\\[3pt]
 \hline
 \endfirsthead
 \hline
-{\bf karx.saM.} & \multicolumn{1}{c|}{\bf vidAvxMsara hesaru}\\
+{\bf karx.saM.} & \multicolumn{1}{c}{\bf vidAvxMsara hesaru}\\[3pt]
 \hline
+  & \\[-15pt]
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
-1 & porx. hiV.ci. shAMtaviVrayayx, beMgaLUru\\
-\hline
-2 & porx. esf. umApati, dAvaNagere\\
-\hline
-3 & porx. ecf.vi. viVraBadarxyayx, tumakUru\\
-\hline
-4 & DA. saMgameVsha savadatitxmaTha, dhAravADa\\
-\hline
-5 & porx. shAMtA imArxpUra, dhAravADa\\
-\hline
-6 & DA. vihx.ji. pUjAra, gulabagAR\\
-\hline
-7 & DA. ke.ecf. sarasavxti, meYsUru\\
-\hline
-8 & porx. jagalUru viVraBadarxyayxsAvxmi, meYsUru\\
-\hline
-9 & porx. esf. sumaMgaLamamx, tumakUru\\
-\hline
-10 & DA. raGushaMKa BAtaMbArx, biVdarf\\
-\hline
-11 & porx. Ti.Arf. mahAdeVvayayx, beMgaLUru\\
-\hline
-12 & DA. si.ji. uSAdeVvi, meYsUru\\
-\hline
-13 & DA. bi.bi. suvaNaR, shivamogagx\\
-\hline
-14 & porx. bi.esf. maMjuLa, tumakUru\\
-\hline
-15 & DA. pAvaRti pUjAra, kopapxLa\\
-\hline
-16 & DA. nAgAbAyi bi buLALx, gulabagAR\\
-\hline
-17 & porx. bi.naM. caMdarxyayx, meYsUru\\
-\hline
-18 & DA. shiVlAkumAri, meYsUru\\
-\hline
-19 & DA. eM.ji. nAgarAjf, beMgaLUru\\
-\hline
-20 & DA. uSA kiraNf, beMgaLUru\\
-\hline
-21 & DA. ecf.Ti. sheYlaja, meYsUru\\
-\hline
-22 & DA. bi.vihx. shirUra, hubabxLiLx\\
-\hline
-23 & DA. bi.bi. pUjAri, solAlxpura\\
-\hline
-24 & DA. eM.si. saroVjamamxNeNx, meYsUru\\
-\hline
-25 & DA. ecf.eM. maheVshavxrayayx, dhAravADa\\
-\hline
-26 & DA. ke.Arf. sidadhxgaMgamamx, beLagAM\\
-\hline
-27 & DA. guruliMgapapx dhabAle, akakxlakoVTe\\
-\hline
-28 & DA. rAjasheVKara icacxMgi, hukekxVri\\
-\hline
-29 & shirxVmati DA. Arf.ePf. bALapapx\\
-\hline
-30 & DA. ke. raviVMdarxnAtha, haMpi\\
-\hline
-\end{longtable}}
-
-\vskip 1cm
-
-
-\begin{center}
-{\large\bf viVrasheYva pAriBASika kananxDa padakoVsha saMpuTakekx pada saMgarxha\break mADikoTiTxruva saMsakxqqta vidAvxMsarugaLa vivara}
-\end{center}
-
-{\renewcommand{\arraystretch}{1.4}
-\begin{longtable}{|r|p{10cm}|}
-\hline
-{\bf karx.saM.} & \multicolumn{1}{c|}{\bf vidAvxMsara hesaru}\\
-\hline
-\endfirsthead
-\hline
-{\bf karx.saM.} & \multicolumn{1}{c|}{\bf vidAvxMsara hesaru}\\
-\hline
-\endhead
-\hline
-\endfoot
-\endlastfoot
-1 & porx. aMbalimaTha, beMgaLUru\\
-\hline
-2 & DA. anitA, beMgaLUru\\
-\hline
-3 & DA. karibasavarAjeVMdarx sAvxmiVji, baLALxri\\
-\hline
-4 & porx. pi.enf. caMdarxsheVKarayayx, tumakUru\\
-\hline
-5 & shirxV bi.esf. jagadiVshf, beMgaLUru\\
-\hline
-6 & DA. niraMjana bAbu, beMgaLUru\\
-\hline
-7 & DA. parxBusAvxmi, meYsUru\\
-\hline
-8 & porx. koV.raM. basavarAju, tumakUru\\
-\hline
-9 & porx. selavxlapx, beMgaLUru\\
-\hline
+  & \\[-15pt]
+1 & aMbalimaTha, beMgaLUru\\
+%\hline
+2 & anitA, beMgaLUru\\
+3 &  umApati esf., dAvaNagere\\
+%\hline
+4 &  uSAkiraNf, beMgaLUru\\
+%\hline
+5 &  uSAdeVvi si.ji., meYsUru\\
+%\hline
+6 & guruliMgapapx dhabAle, akakxlakoVTe\\
+%\hline
+7 & karibasavarAjeVMdarx sAvxmiVji, baLALxri\\
+8 &  caMdarxyayx bi.naM., meYsUru\\
+9 &  caMdarxsheVKarayayx pi.enf., tumakUru\\
+%\hline
+10 & jagadiVshf bi.esf., beMgaLUru\\
+11 & jagalUru viVraBadarxyayxsAvxmi, meYsUru\\
+%\hline
+12 & nAgarAjf eM.ji., beMgaLUru\\
+%\hline
+13 &  nAgAbAyi bi buLALx, gulabagAR\\
+%\hline
+14 & niraMjana bAbu, beMgaLUru\\
+15 & parxBusAvxmi, meYsUru\\
+16 &  pAvaRti pUjAra, kopapxLa\\
+%\hline
+17 & pUjAra vihx.ji., gulabagAR\\
+%\hline
+18 &  pUjAri bi.bi., solAlxpura\\
+%\hline
+19 &  basavarAju koV.raM., tumakUru\\
+20 & bALapapx (shirxVmati) Arf.ePf.\\
+%\hline
+21 & maMjuLa bi.esf., tumakUru\\
+%\hline
+22 & mahAdeVvayayx Ti.Arf., beMgaLUru\\
+%\hline
+23 & maheVshavxrayayx ecf.eM., dhAravADa\\
+%\hline
+24 & raGushaMKa BAtaMbArx, biVdarf\\
+%\hline
+25 & raviVMdarxnAtha ke., haMpi\\
+%\hline
+26 & rAjasheVKara icacxMgi, hukekxVri\\
+%\hline
+27 & viVraBadarxyayx ecf.vi., tumakUru\\
+%\hline
+28 & shAMtaviVrayayx hiV.ci., beMgaLUru\\
+%\hline
+29 & shAMtA imArxpUra, dhAravADa\\
+%\hline
+30 & shirUra bi.vihx., hubabxLiLx\\
+%\hline
+31 & shiVlAkumAri, meYsUru\\
+%\hline
+32 & sheYlaja ecf.Ti., meYsUru\\
+%\hline
+33 & saMgameVsha savadatitxmaTha, dhAravADa\\
+%\hline
+34 & sarasavxti ke.ecf., meYsUru\\
+%\hline
+35 & saroVjamamxNeNx eM.si., meYsUru\\
+%\hline
+36 & sidadhxgaMgamamx ke.Arf., beLagAM\\
+%\hline
+37 & sumaMgaLamamx esf., tumakUru\\
+%\hline
+38 & suvaNaR bi.bi., shivamogagx\\
+39 &  selavxlapx, beMgaLUru\\
+%\hline
 \end{longtable}}
