--- a/tex-for-print/anubandha-4.tex
+++ b/tex-for-print/anubandha-4.tex
@@ -1,47 +1,51 @@
-\chapter*{anubaMdha 4}
+\chapter*{anubaMdha 3}
+
+\begin{center}
+{\large\bf saMsakxqqta kaqtigaLa saMkiSxpatx sUci}
+\end{center}
 
 {\renewcommand{\arraystretch}{1.3}
-\begin{longtable}{rp{6cm}cp{9cm}<{\raggedright}@{}}
-\hline
+\begin{longtable}{lp{5cm}cp{5cm}<{\raggedright}p{3cm}<{\raggedright}@{}}
+%\hline
 \endfirsthead
-\hline
+%\hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
-1. & anAdiviVrasheYvasArasaMgarxha : (BA-1)\newline (kananxDa vAyxKAyx sahita) &-& saMpAdaneya sidadhxviVraNaNx shivayoVgi. saM. ji.e. shivaliMgayayx, basava samiti, beMgaLUru, 1999\\
+{\bf 1. a.viV.sA.saM.} &  anAdiviVrasheYvasArasaMgarxha (BA-1) (kananxDa vAyxKAyxsahita) &-& saMpAdaneya sidadhxviVraNaNx shivayoVgi.\newline saM. ji.e. shivaliMgayayx, & basava samiti, beMgaLUru, 1999\\
 %2. & anAdivivrasheYvasArasaMgarxha : (BA-1) &-& saM. maNUra maThAdhayxkaSx malilxkAjuRnashAsitxrXV, viVrasheYva liMgibArxhamxNa garxMthamAlA, soVlApura, 1905\\
-2. & anAdiviVrasheYvasArasaMgarxha (BA-2)\newline (kananxDa vAyxKAyx sahita) &-& parxdhAna saMpAdaka. DA. si. shivakumArasAvxmi, viVrasheYva sAhitayx parxtiSAThxna, viBUtipura maTha, beMgaLUru, 2005\\
+{\bf 2. a.viV.sA.saM.} & anAdiviVrasheYvasArasaMgarxha (BA-2) (kananxDa vAyxKAyx sahita) &-& parx.saM. DA. si. shivakumArasAvxmi & viVrasheYva sAhitayx parxtiSAThxna, viBUtipura maTha, beMgaLUru, 2005\\
 %3. & anuBavasUtarx (mAyideVva)\newline (hiMdiV vAyxKAyx sahita) &-& saM. varxjavalalxBadivxveVdiV, sheYvaBArati shoVdha parxtiSAThxna, vArANasi, 1998\\
-3. & anuBavasUtarx (mAyideVva)\newline (kananxDAnuvAda sahita) &-& saM. DA. si. shivakumArasAvxmi, viVrasheYva anusaMdhAna saMsAThxna, beMgaLUru, 2003\\
-4. & amarakoVsha (amarasiMha)\newline (sudhA vAyxKoyxVpeVtaH) &-& (vAyx) shirxV BAnUji diVkiSxta, cwKaMbA saMsakxqqta parxtiSAThxna, nava dehali (divxtiVya mudarxNa), 1978\\
-5. & AtAmxpaRNasutxti (apapxyayx diVkiSxta)\newline (bAlaboVdhiniV vAyxKAyxsahita) &-& (vAyx) shirxV shivAnaMdayati, shirxVmadapapxyayx diVkiSxta garxMthAvali parxkAshana samiti, sikaMdarAbAdf, 1980\\
-6. & athavaRshiKoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saMgArxhaka. paM. jagadiVsha shAsitxrXV, moVtilAla banArasiV dAsf, dehali, 1980\\
-7. & athavaRshiroVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saMgArxhaka. paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-8. & aBijAcnxna shAkuMtala (kAlidAsa)\newline (kananxDAnuvAda sahita) &-& saM. porx. ke.Ti. pAMDuraMgi, beMgaLUru vishavxvidAyxlaya, beMgaLUru, 1978\\
-9. & aSATxdhAyxyiV sUtarxpATha\newline (pANini) &-& saM. sAvxmiV parxhAlxda giri veVdAMtakeVsari, kaqSaNxdAsa akAdemi, dehali, (divxtiVya mudarxNa), 1987\\
-10. & amaqtabiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& saMgArxhaka. paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-11. & akaSxmAlikoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-12. & IshAvAsoyxVpaniSatf &-& rAmakaqSaNxmaTha, madArxsf, 1948\\
-13. & upaniSadAvxkayxmahAkoVshaH &-& shirxV gajAnana shaMBu sAdhale, cwKaMbA vidAyxBavana, vAraNAsi, 1990\\
-14. & upaniSatasxMgarxhaH &-& saM. paM. jagadiVshashAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-15. & QugevxVda &-& veYdika saMshoVdhana maMDali, puNe\\
-16. & aitareVyoVpaniSatf &-& shirxVrAmakaqSANxsharxma, meYsUru, 1954 (nAlakxneya mudarxNa, 1984)\\
-17. & kaThoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 3. a.sU.} & anuBavasUtarx (mAyideVva)\newline (kananxDAnuvAda sahita) &-& saM. DA. si. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAThxna,\newline beMgaLUru, 2003\\
+{\bf 4. a.koV.} &  amarakoVsha (amarasiMha)\newline (sudhA vAyxKoyxVpeVtaH) &-& (vAyx) shirxV BAnUji diVkiSxta & cwKaMbA saMsakxqqta parxtiSAThxna, nava dehali (divx.mu), 1978\\
+{\bf 5. A.sutx.} & AtAmxpaRNasutxti (apapxyayx diVkiSxta)\newline (bAlaboVdhiniV vAyxKAyxsahita) &-& (vAyx) shirxV shivAnaMdayati & shirxVmadapapxyayx diVkiSxta garxMthAvali parxkAshana samiti, sikaMdarAbAdf, 1980\\
+{\bf 6. atha.shiKA.} & athavaRshiKoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saMgArxhaka. paM. jagadiVsha shAsitxrXV & moVtilAla banArasiV dAsf, dehali, 1980\\
+{\bf 7. atha.shirasf.} & athavaRshiroVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saMgArxhaka. paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf. dehali, 1980\\
+{\bf 8. aBi.shA.} & aBijAcnxna shAkuMtala (kAlidAsa)\newline (kananxDAnuvAda sahita) &-& saM. porx. ke.Ti. pAMDuraMgi &  beMgaLUru vishavxvidAyxlaya, beMgaLUru, 1978\\
+{\bf 9. aSATx.} & aSATxdhAyxyiV sUtarxpATha\newline (pANini) &-& saM. sAvxmiV parxhAlxda giri veVdAMtakeVsari & kaqSaNxdAsa akAdemi, dehali, (divx.mu), 1987\\
+{\bf 10. amaq.Bi.} & amaqtabiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& saMgArxhaka. paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf,  dehali, 1980\\
+{\bf 11. akaSx.mA.u.} & akaSxmAlikoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVshashAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 12. I.u.} & IshAvAsoyxVpaniSatf &-& rAmakaqSaNxmaTha & madArxsf, 1948\\
+{\bf 13. u.ma.} & upaniSadAvxkayxmahAkoVshaH &-& shirxV gajAnana shaMBu sAdhale & cwKaMbA vidAyxBavana, vAraNAsi, 1990\\
+{\bf 14. u.garx.} & upaniSatasxMgarxhaH &-& saM. paM. jagadiVshashAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 15. Qu.veV.} & QugevxVda &-& veYdika saMshoVdhana maMDali & puNe\\
+{\bf 16. ai.u.} & aitareVyoVpaniSatf &-& shirxVrAmakaqSANxsharxma & meYsUru, 1954 (nA.mu. 1984)\\
+{\bf 17. kaTha.u.} & kaThoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
 %20. & kAraNAgama (kirxyApAda)\newline (hiMdiVBASAnuvAda sahita) &-& saM. porx. rAmacaMdarxpAMDeVya sheYva BAratiV shoVdha parxtiSAThxna, vArANasi, 1994\\
-18. & kAraNAgama (kirxyApAda)\newline (kananxDAnuvAda sahita) &-& DA. malilxkAjuRna paraDiDx, viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 1999\\
-19. & kAmikAgamaH\newline (shivAgama swraBAMtagaRta) &-& saM. vidAvxnf eM.ji. naMjuMDArAdhayx, ja.ca.ni. adhayxyana piVTha matutx saMshoVdhanA saMsethx, beMgaLUru, 1985\\
-20. & kAlAginxrudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-21. & kiraNAgamaH\newline (taMtarxsaMgarxhaH) &-& hUTagiVmaTha, soVlApura, 1914\\
-22. & keVnoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV. moVtilAla banAsaridAsf, dehali, 1980\\
-23. & keYvalayxsAraH\newline (maritoVMTadAyaR) &-& pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1988\\
-24. & keYvaloyxVpaniSatf\newline (sadAshivaBASoyxVpeVta) &-& shirxV sadAshiva shivAcAyaRH, parxboVdha pusatxka mAlA, beMgaLUru, 1951\\
-25. & kirxyAsAra (niVlakaMTha shivAcAyaR)\newline (BA-1, 2, 3) &-& pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1954, 1957, 1958\\
+{\bf 18. kA.A.ka.} & kAraNAgama (kirxyApAda)\newline (kananxDAnuvAda sahita) &-& DA. malilxkAjuRna paraDiDx & viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 1999\\
+{\bf 19. kAmika.} & kAmikAgamaH\newline (shivAgama swraBAMtagaRta) &-& saM. vidAvxnf eM.ji. naMjuMDArAdhayx & ja.ca.ni. adhayxyana piVTha matutx saMshoVdhanA saMsethx, beMgaLUru, 1985\\
+{\bf 20. kA.ru.u.} & kAlAginxrudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 21. ki.A.} & kiraNAgamaH\newline (taMtarxsaMgarxhaH) &-& hUTagiVmaTha & soVlApura, 1914\\
+{\bf 22. keV.u.} & keVnoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& saM. paM. jagadiVsha shAsitxrXV & moVtilAla banAsaridAsf, dehali, 1980\\
+{\bf 23. keY.sA.} & keYvalayxsAraH\newline (maritoVMTadAyaR) &-& pArxcayx vidAyx saMshoVdhanAlaya & meYsUru, 1988\\
+{\bf 24. keY.u.} & keYvaloyxVpaniSatf\newline (sadAshivaBASoyxVpeVta) &-& shirxV sadAshiva shivAcAyaRH & parxboVdha pusatxka mAlA, beMgaLUru, 1951\\
+{\bf 25. kirx.sA.} & \hbox{kirxyAsAra (niVlakaMTha shivAcAyaR)}\newline (BA-1, 2, 3) &-& pArxcayx vidAyx saMshoVdhanAlaya & meYsUru, 1954, 1957, 1958\\
 %26. & caMdarxjAcnxnAgama\newline (kirxyApAda-cayARpAda)\newline (AMgalxBASAnuvAda sahita) &-& saM. DA. ramAGoVSf, sheYva BArati shoVdha parxtiSAThxna, vArANasi, 1995\\
-26. & caMdarxjAcnxnAgama\newline (kirxyApAda-cayARpAda)\newline (kananxDAnuvAda sahita) &-& saM. DA. eM. shivakumArasAvxmi, viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2002\\
-27. & CAMdoVgoyxVpaniSatf &-& sAvxmi AdideVvAnaMda, shirxV rAmakaqSANxsharxma, meYsUru, 1995\\
-28. & jAbAluyxpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-29. & teVjoVbiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 26. caM.A.} & caMdarxjAcnxnAgama\newline (kirxyApAda-cayARpAda)\newline (kananxDAnuvAda sahita) &-& saM. DA. eM. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2002\\
+{\bf 27. CAM.u.} & CAMdoVgoyxVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxV rAmakaqSANxsharxma, meYsUru, 1995\\
+{\bf 28. jA.u.} & jAbAluyxpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 29. teV.u.} & teVjoVbiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
 30. & tatatxvXparxkAshikA (aGoVrashivAcAyaR)\newline (BoVjakaqtavAyxKAyxna) &-& vidAvxnf bi. rAjasheVKarayayx, viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2010\\
 31. & teYtitxriVyoVpaniSatf &-& sAvxmi AdideVvAnaMda, shirxVrAmakaqSANxsharxma, meYsUru, 1993\\
 32. & dakiSxNAmUtuRyxpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
@@ -669,14 +673,14 @@
 {\renewcommand{\arraystretch}{1.5}
 \begin{longtable}{l>{\raggedright}p{7cm}l}
 \hline
-\multicolumn{1}{c}{\bf saMkiSxpAtxkaSxra} & \multicolumn{1}{c}{\bf kaqtiya hesaru} & \multicolumn{1}{c}{\bf koTiTxruva saMKeyx}\\
+\multicolumn{1}{c}{\bf saMkiSxpAtxkaSxra} & \multicolumn{1}{c}{\bf kaqtiya hesaru} & \multicolumn{1}{c}{\bf koTiTxruva saMKeyx}\\[3pt]
 \hline
 \endfirsthead
 \hline
-\multicolumn{1}{c}{\bf saMkiSxpatx} & \multicolumn{1}{c}{\bf kaqtiya hesaru} & \multicolumn{1}{c}{\bf koTiTxruva saMKeyx}\\
+\multicolumn{1}{c}{\bf saMkiSxpatx} & \multicolumn{1}{c}{\bf kaqtiya hesaru} & \multicolumn{1}{c}{\bf koTiTxruva saMKeyx}\\[3pt]
 \hline
 \endhead
-\hline
+%\hline
 \endfoot
 \endlastfoot
 anuBa & anuBavasAra &  kiVtaRne, padayx, puTa\\
@@ -759,4 +763,3 @@ hiMdasA & hiMdU dashaRnasAra & \\
 %a\char'273\char'311mA '' & a\char'273\char'311vina mAritaMdegaLa vacanagaLu & \qquad '' '' ''\\
 %urideV '' & uriliMgadeVvara vacana & \qquad '' '' ''\\
 %uripe '' & uriliMgapedidxgaLa vacana & \qquad '' '' ''\\
-
