work in progress

--- a/copyright.tex
+++ b/copyright.tex
@@ -11,16 +11,26 @@
 {\rm Pages. ????--????}\\[7pt]
 {\rm \copyright \ Publishers}\\[7pt]
 {\rm First Edition : 2019}\\[7pt]
-{\rm No. of copies : 1000}\\[7pt]
+{\rm No. of Copies : 1000}\\[7pt]
 {\rm Price :} \rupee
 
-\vspace{2cm}
+\bigskip
+
+\noindent
+{\rm Typeset by : Sriranga Digital Software Technologies Pvt. Ltd., Srirangapatna.}
+
+\medskip
+
+\noindent
+{\rm Printed at : ?????????????}
+
+\vfill
 
 \noindent
 {\large shivapada ratanxkoVsha}\\[5pt]
 (viVrasheYva-liMgAyata samagarx pAriBASika padakoVsha)\\[5pt]
 saMpAdane : saMpAdaka samiti\\[4pt]
-parxkaTaNe : je{esf}{esf} garxMthamAle, meYsUru\\
+parxkaTaNe : je{esf}{esf} \ garxMthamAle, meYsUru\\
 
 \vspace{1cm}
 
@@ -31,29 +41,44 @@ parxthama mudarxNa : 2019\\[7pt]
 parxtigaLu : 1000\\[10pt]
 bele : \rupee
 
+\bigskip
 
-{\rm
+\noindent
+akaSxra joVDaNe : shirxVraMga DijiTalf sAPfTxveVrf TekAnxlajiVsf, perxY. li., shirxVraMgapaTaTxNa.
 
-Prof. G. S. Siddalingaiah,
+\medskip
 
-Prof. T. V. Venkatachalashastri,
+\noindent
+mudarxkaru : ????????
 
-Prof. S. Vidyashankar,
+\newpage
 
-Dr. N. S. Taranatha,
+\thispagestyle{empty}
 
-Dr. H. V. Nagarajarao,
+\phantom{a}
 
-Dr. C. Shivakumaraswamy,
+\vfill
 
-Dr. Guru Chennabasappa,
+\begin{center}
+{\Large\bf saMpAdaka samiti}
 
-Prof. S. Nanjundaiah,
+\bigskip
+{\fontsize{13pt}{15pt}\selectfont
+porx. ji.esf. sidadhxliMgayayx\\[6pt]
+porx. Ti.vi. veMkaTAcalashAsitxrX\\[6pt]
+porx. esf. vidAyxshaMkarf\\[6pt]
+DA. enf.esf. tArAnAthf\\[6pt]
+DA. hecf.vi. nAgarAjarAvf\\[6pt]
+DA. si. shivakumArasAvxmi\\[6pt]
+DA. guru cananxbasapapx\\[6pt]
+porx. esf. naMjuMDayayx\\[6pt]
+shirxV. Arf.esf. pUNARnaMda\\[6pt]
+DA. naMdiVshf haMce (kAyaR nivARhaka saMpAdakaru)}\relax
+\end{center}
 
-Sri. R. S. Poornanand,
+\vfill
 
-Dr. Nandish Hanche,} (kArayx nivARhaka saMpAdakaru)
-}
+\phantom{a}
 
 
 
