--- a/tex-for-print/anubandha-2.tex
+++ b/tex-for-print/anubandha-2.tex
@@ -1,11 +1,13 @@
-\chapter*{anubaMdha 2}
+\begin{center}
+{\Huge\bfseries anubaMdha 2}
+
+\vskip 1cm
+
+{\large\bf padasaMgarxha mADikoTiTxruva vidAvxMsarugaLa vivara}
+\end{center}
 
 \lhead[]{}
 \rhead[]{}
-
-\begin{center}
-{\large\bf padasaMgarxha mADikoTiTxruva vidAvxMsarugaLa vivara}
-\end{center}
 
 \vskip -.5cm
 
