--- a/tex-for-print/anubandha-4.tex
+++ b/tex-for-print/anubandha-4.tex
@@ -1,6 +1,8 @@
-\chapter*{anubaMdha 3}
-
 \begin{center}
+{\Huge\bfseries anubaMdha 3}
+
+\vskip 1cm
+
 {\large\bf saMsakxqqta kaqtigaLa saMkiSxpatx sUci}
 \end{center}
 
@@ -46,28 +48,28 @@
 {\bf 27. CAM.u.} & CAMdoVgoyxVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxV rAmakaqSANxsharxma, meYsUru, 1995\\
 {\bf 28. jA.u.} & jAbAluyxpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
 {\bf 29. teV.u.} & teVjoVbiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
-30. & tatatxvXparxkAshikA (aGoVrashivAcAyaR)\newline (BoVjakaqtavAyxKAyxna) &-& vidAvxnf bi. rAjasheVKarayayx, viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2010\\
-31. & teYtitxriVyoVpaniSatf &-& sAvxmi AdideVvAnaMda, shirxVrAmakaqSANxsharxma, meYsUru, 1993\\
-32. & dakiSxNAmUtuRyxpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-33. & deVviVkAloVtatxrAgamaH &-& (saM) varxjavalalxBa divxveVdi, sheYvaBAratiV shoVdha parxtiSAThxna, vArANasi, 2000\\
-34. & nAdabiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-35. & nirukatxmf (yAsakx)\newline (niGaMTu sahita) &-& DA. lakaSxmXNa savxrUpa, moVtilAla banArasidAsf, dehali, 1984\\
-36. & niVlarudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-37. & paMcabarxhomxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-38. & paMDitArAdhayx caritamf (gururAja kavi)\newline (kananxDAnuvAda sahita) &-& (saM) enf. Arf. karibasavashAsitxrXV, viVrasheYva garxMtha parxkAshikA, meYsUru, BAga-1 (1908), BAga-2 (1913)\\
-39. & pArameVshavxrAgama\newline (hiMdiV BASAnuvAda sahita) &-& (saM) paM. varxjavalalxBa divxveVdi, sheYva BArati shoVdha parxtiSAThxna, vArANasi, 1995\\
-40. & pArameVshavxrAgama\newline (kananxDAnuvAda sahita) &-& (saM) DA. eM. shivakumArasAvxmi, viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2000\\
-41. & pAshupatAgama\newline (shivAgamaswraBa) &-& vidAvxnf eM. ji. naMjuMDArAdhayx, shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru, 1986\\
-42. & peYMgaloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-43. & pwSakxrAgama\newline (sidAdhxMtasheVKara) &-& porx. siVtArAma soVmayAji, meYsUru, 1901\\
-44. & parxtayxBijAcnxhaqdayamf &-& kAshimxVra saMsakxqqta garxMthAvali, shirxVnagara, 1911\\
-45. & parxshonxVpaniSatf &-& sAvxmi AdideVvAnaMda, shirxVrAmakaqSaNxmaTha, meYsUru, 1993\\
-46. & parxsAdajAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsa, dehali, 1980\\
-47. & parxBugiVtA (mAyideVva) &-& (saM) porx. si. mahAdeVvapapx, saMshoVdhanAkoVTi, beMgaLUru, 2001\\
-48. & baqhadAraNayxkoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-49. & baqhajAjxbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-50. & barxhomxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-51. & BagavadigxVtA &-& giVtA perxsf, goVraKfpurf, 2008\\
+{\bf 30. ta.parxkA.} & tatatxvXparxkAshikA\,(aGoVrashivAcAyaR)\newline (BoVjakaqtavAyxKAyxna) &-& vidAvxnf bi. rAjasheVKarayayx & viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2010\\
+{\bf 31. teY.u.} & teYtitxriVyoVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxVrAmakaqSANxsharxma, meYsUru, 1993\\
+{\bf 32. da.u.} & dakiSxNAmUtuRyxpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 33. deVviV.A.} & deVviVkAloVtatxrAgamaH &-& (saM) varxjavalalxBa divxveVdi & sheYvaBAratiV shoVdha parxtiSAThxna, vArANasi, 2000\\
+{\bf 34. nAda.u.} & nAdabiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 35. } & nirukatxmf (yAsakx)\newline (niGaMTu sahita) &-& DA. lakaSxmXNa savxrUpa & moVtilAla banArasidAsf, dehali, 1984\\
+{\bf 36. niV.ru.u.} & niVlarudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 37. paM.barx.u.} & paMcabarxhomxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 38. paMDi.ca.} & paMDitArAdhayx caritamf\newline (gururAja kavi)\newline (kananxDAnuvAda sahita) &-& (saM) enf. Arf. karibasavashAsitxrXV & viVrasheYva garxMtha parxkAshikA, meYsUru, BAga-1 (1908), BAga-2 (1913)\\
+{\bf 39. pAra.A.} & pArameVshavxrAgama\newline (hiMdiV BASAnuvAda sahita) &-& (saM) paM. varxjavalalxBa divxveVdi & sheYva BArati shoVdha parxtiSAThxna, vArANasi, 1995\\
+{\bf 40. pAra.A.} & pArameVshavxrAgama\newline (kananxDAnuvAda sahita) &-& (saM) DA. eM. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2000\\
+{\bf 41. pAshu.A.} & pAshupatAgama\newline (shivAgamaswraBa) &-& vidAvxnf eM. ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru, 1986\\
+{\bf 42. peY.u.} & peYMgaloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 43. pwSakx.A.} & pwSakxrAgama\newline (sidAdhxMtasheVKara) &-& porx. siVtArAma soVmayAji & meYsUru, 1901\\
+{\bf 44. parx.haq.} & parxtayxBijAcnxhaqdayamf &-& kAshimxVra saMsakxqqta garxMthAvali & shirxVnagara, 1911\\
+{\bf 45. parx.u.} & parxshonxVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxVrAmakaqSaNxmaTha, meYsUru, 1993\\
+{\bf 46. parx.jA.u.} & parxsAdajAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsa,\newline dehali, 1980\\
+{\bf 47. parx.giV.} & parxBugiVtA (mAyideVva) &-& (saM) porx. si. mahAdeVvapapx & saMshoVdhanAkoVTi, beMgaLUru, 2001\\
+{\bf 48. baq.u.} & baqhadAraNayxkoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 49. baq.jA.u.} & baqhajAjxbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 50. barx.u.} & barxhomxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 51. Ba.giV.} & BagavadigxVtA &-& giVtA perxsf & goVraKfpurf, 2008\\
 52. & BagavadigxVtA viVrasheYvaBASayx &-& DA. Ti.ji. sidadhxpApxrAdhayx, baqhanamxTha, citarxdugaR, 1935\\
 53. & BAratiVyadashaRna pariBASAkoVsha\newline (BA-1) &-& veYjAcnxnika matutx tAMtirxka shabAdxvaliV AyoVga, BArata sakARra, navadehali, 1999\\
 %58. & makuTAgama (kirxyApAda-cayARpAda)\newline (hiMdiV BASAnuvAda sahita) &-& (saM) paM. varxjavalalxBadivxveVdi, sheYvaBArati shoVdha parxtiSAThxna, vArANasi, 1995\\
