work in progress

--- a/tex-for-print/anubandha-4.tex
+++ b/tex-for-print/anubandha-4.tex
@@ -70,70 +70,61 @@
 {\bf 49. baq.jA.u.} & baqhajAjxbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
 {\bf 50. barx.u.} & barxhomxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
 {\bf 51. Ba.giV.} & BagavadigxVtA &-& giVtA perxsf & goVraKfpurf, 2008\\
-52. & BagavadigxVtA viVrasheYvaBASayx &-& DA. Ti.ji. sidadhxpApxrAdhayx, baqhanamxTha, citarxdugaR, 1935\\
-53. & BAratiVyadashaRna pariBASAkoVsha\newline (BA-1) &-& veYjAcnxnika matutx tAMtirxka shabAdxvaliV AyoVga, BArata sakARra, navadehali, 1999\\
-%58. & makuTAgama (kirxyApAda-cayARpAda)\newline (hiMdiV BASAnuvAda sahita) &-& (saM) paM. varxjavalalxBadivxveVdi, sheYvaBArati shoVdha parxtiSAThxna, vArANasi, 1995\\
-54. & makuTAgama (kirxyApAda-cayARpAda)\newline (kananxDAnuvAda sahita) &-& (saM) DA. si. shivakumArasAvxmi, viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 1998\\
-55. & mahAnArAyaNoVpaniSatf\newline (sheYvaBASayx sahita) &-& BASayxkAra. shirxV vaqSaBeVMdarx paMDita shivAcAyaR,\newline vishAvxrAdhayx gurukula, kAshiV, 1959\\
-56. & mahoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsa,\newline dehali, 1980\\
-57. & mAMDUkoyxVpaniSatf\newline (gwDapAdakArikoVpeVtA) &-& sAvxmi AdideVvAnaMda, shirxVrAmakaqSANxsharxma, meYsUru, 1984\\
-58. & muMDakoVpaniSatf &-& sAvxmi AdideVvAnaMda, shirxVrAmakaqSANxsharxma, meYsUru, 1957\\
-59. & maqgeVMdArxgama\newline (shivAgama swraBAMtagaRta) &-& vidAvxnf eM.ji. naMjuMDArAdhayx, shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru, 1985\\
-60. & meYterxVyoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-61. & meYterxVyuyxpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-62. & yoVgashiKoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-63. & raGuvaMsha (kAlidAsa) &-& niNaRyasAgara perxsf, muMbayi, 1932\\
-64. & rudArxkaSxjAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-65. & rudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-66. & rudarxhaqdayoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-67. & liMgadhAraNacaMdirxkA\newline (naMdikeVshavxra shivAcAyaR) &-& paM. varxjavalalxBa divxveVdi, sheYvaBArati shoVdha parxtiSAThxna, vArANasi, 1988\\
-68. & liMgoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-69. & vAtulAgama\newline (shivAgamaswraBa) &-& vidAvxnf eM.ji. naMjuMDArAdhayx, shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru, 1986\\
-70. & visheVSAthaR parxkAshikA (mAyideVva)\newline (kananxDAnuvAda sahita) &-& (saM) paM. veY. nAgeVsha shAsitxrX, shirxV muruGAmaTha, dhAravADa, 1961\\
-71. & viVramAheVshavxrAcAra saMgarxha : (BA-1)\newline (niVlakaMThanAganAthAcAyaR viracita) &-& (saM.) eM.esf. basavarAjayayx, pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1991\\
-72. & viVrasheYvadhamaR shiroVmaNi\newline (kananxDa vAyxKAyx sahita) &-& (vAyx) eM. basavaliMga shAsitxrX, viVrasheYvagarxMtha parxkAshikA garxMthAvali, meYsUru, 1908\\
-%78. & viVrasheYvasadAcAra saMgarxha &-& veV.mU. maNUra maThada malilxkAjuRna shAsitxrXV, liMgibArxhamxNa garxMthamAlA, soVlApura, 1905\\
-73. & viVrasheYva sadAcAra saMgarxha\newline (kananxDAnuvAda sahita) &-& (saM) paM. basavarAjashAsitxrXV pagaDadininxmaTha, shirxV jagadugxru garxMtha parxkAshikA garxMthAvali, mUrusAvira maTha, hubabxLiLx, 1964\\
-74. & viVrasheYvAnaMdacaMdirxkA (vAdakAMDa)\newline (maritoVMTadAyaR) &-& (saM) shirxV soVmeVshavxrashAsitxrXV, shirxV jagadugxru gaMgAdhara saMsakxqqta mahApAThashAlA, hubabxLiLx, 1936\\
-75. & viVrasheYvoVtakxSaRparxdiVpikA &-& hAlapaTaTxNada cenanxbasavasAvxmi, shirxV duraduMDeVshavxramaTha, arabAvi, beLagAvi jilelx, 1936\\
-76. & viVrasheYva parxdiVpikA &-& shirxV jayacAmarAjeVMdarx garxMthamAlA, meYsUru, 1918\\
-%83. & viVrasheYvapAriBASika padakoVsha (kananxDa) &-& DA. esf. vidAyxshaMkarf, porx. bi. virUpAkaSxpapx, basava samiti, beMgaLUru, 2000\\
-77. & viVrAgamoVtatxramf (BAga-1) &-& (saM) DA. ecf.pi. malelxVdeVvaru, pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1988\\
-78. & viVrAgama (kananxDa vAyxKAyxna sahita) &-& (saM) DA. ja.ca.ni. shirxV jagadugxru paMcAcAyaR seVvA saMGa, gadaga-beTageVri, 1962\\
-79. & viVrasheYvoVpaniSatf &-& paM. kAshiVnAtha shAsitxrXV, paMcAcAyaR perxsf, meYsUru, 1981 (ELaneya Avaqtitx)\\
-80. & veVdAMtasAraviVrasheYva ciMtAmaNi\newline (utatxrakAMDa) - (niTUTxru naMjaNAyaR) (marAThi anuvAda sahita) &-& (saM) shirxV malilxkAjuRna shAsitxrXV, shirxV datatx parxsAda siTxVmf perxsf, soVlApura, 1908\\
-81. & veYdika shivapUjA vidhi &-& paM. kAshiVnAtha shAsitxrXV, paMcAcAyaR mudarxNAlaya, meYsUru, 1980 (eMTaneya Avaqtitx)\\
-82. & shatakatarxyamf (mAyideVva) &-& paM. veY. nAgeVsha shAsitxrXV, muruGamaTha, dhAravADa, 1964\\
-83. & sharaBoVpaniSatf\newline (upaniSatasxMgarxha) &-& (saM) paM. jagadiVsha shAsitxrXV, moVtilAla banArasiV dAsf, dehali, 1970\\
-84. & shabAdxthaR kwsutxBa\newline (saMsakxqqta-kananxDa niGaMTu) (BAga 1-6) &-& cakarxvatiR shirxVnivAsa rAjagoVpAlAcAyaR, bApokxV parxkAshana, beMgaLUru, 1999\\
-85. & shakitxvishiSATxdevxYta dashaRnamf &-& DA. Ti.ji. sidadhxpApxrAdhayx, gubibx shirxV cenanxbasaveVshavxra garxMthamAlA, meYsUru, 1934\\
-%93. & shakitxvishiSATxdevxYta tatatxvXtarxya vimashaRH\newline (saMsakxqqta) &-& DA. caMdarxsheVKara shivAcAyaR mahAsAvxmigaLavaru, sheYvaBArati shoVdha parxtiSAThxna, vArANasi, 1996\\
-86. & shakitxvishiSATxdevxYta tatatxvXtarxya vimasheR\newline (kananxDAnuvAda) &-& DA. si. shivakumArasAvxmi, rAjayx patArxgAra ilAKe, (kanARTaka sakARra), beMgaLUru, 2009\\
-87. & shivatatatxvXratAnxkara\newline (keLadi basava BUpAla) &-& pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, BAga-1 (1964), BAga-2 (1969), BAga-3 (1975)\\
-%96. & shivatatatxvXratAnxkara\newline (kananxDAnuvAda sahita) &-& (saM) porx. malelxVpurA ji. veMkaTeVshf, kananxDa vishavxvidAyxlaya, haMpi, 1999\\
-88. & shivayoVga parxdiVpikA\newline (\hbox{cenanxsadAshiva\-yoVgi})\newline (kananxDA TiVkA sahita) &-& TiVkAkAra, basavArAdhayx, kananxDa adhayxyana piVTha, kanARTaka vishavxvidAyxlaya, dhAravADa, 1976\\
-89. & shivAdevxYtamaMjariV \hbox{(savxparxBAnaMda shivAcAyaR)}\newline (kananxDa vAyxKAyxnasahita) &-& shirxV rAmAnuja ayayxMgArf, paMcAcAyaR perxsf, meYsUru, 1929\\
-90. & shivAdhikayxshiKAmaNi\newline (soVsale \hbox{reVvaNArAdhayx}) &-& (saM) shirxV soVmasheVKara sAvxmi, namaHshivAya maTha, meYsUru, 1929\\
-91. & shivAgamaswraBa (kananxDa) &-& (saM) vidAvxnf eM.ji. naMjuMDArAdhayx, shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru, 1985\\
-%101. & shivAnuBavashabadxkoVsha (kananxDa) &-& Pa.gu. haLakaTiTx, samAja pusatxkAlaya, dhAravADa, 1962\\
-92. & sheYvadashaRna itihAsa matutx tatatxvXparxkAsha\newline (BoVjarAja viracita) &-& (saM) vidAvxnf eM.ji. naMjuMDArAdhayx, parxboVdha garxMthamAlA, meYsUru, 1974\\
-93. & sheYvoVpaniSatf\newline {\small\rm (SAIVOPANISADS)} &-& (saM) paM. mahAdeVvashAsitxrXV, aDAyxrf leYbarxri, madArxsf, 1925\\
-94. & sheYvapariBASA\newline (shivAgarxyoVgiVMdarxjAcnxna shivAcAyaR) &-& (saM) ecf.Arf. raMgasAvxmi ayayxMgArf,\newline sakARri mudarxNAlaya, meYsUru, 1950\\
-95. & sheYvaratAnxkara (joyxVtinARtha) (BAga-1) &-& (saM) DA. si.enf. basavarAju, pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1992\\
-96. & sheYvaratAnxkara (joyxVtinARtha) (BAga-2) &-& (saM) malilxkAjuRna shAsitxrXV, liMgi bArxhamxNa garxMthamAlA, soVlApura, 1909\\
-97. & sheYvasidAdhxMtadiVpikA\newline (mAheVshavxra) &-& (saM) pi.Arf. karibasavashAsitxrXV, shaMkaravilAsa perxsf, meYsUru, 1907\\
-98. & shurxtisAraBASayx\newline (shirxV shivapUjAshivaliMgashivayoVgiVMdarx) &-& (saM) DA. Ti.ji. sidadhxpApxrAdhayx, pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1913\\
-99. & shirxVkaraBASayx (shirxVpati paMDita) &-& (saM) DA. Ti.ji. sidadhxpApxrAdhayx, pArxcayx vidAyx saMshoVdhanAlaya, meYsUru (BAga-1, 1977), (BAga-2, 1978)\\
-100. & shevxVtAshavxtaroVpaniSatf\newline (viVrasheYvaBASoyxVpeVtA) &-& DA. Ti.ji. sidadhxpApxrAdhayx, shirxV muruGAmaTha, citarxdugaR, 1965\\
-101. & sadAnaMdoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV, moVtilAla banArasidAsf, dehali, 1980\\
-102. & savaRdashaRnasaMgarxha\newline (mAdhavAcAyaR) &-& (saM) DA. imamxDi shivabasavasAvxmigaLu, kananxDa adhayxyana piVTha, kanARTaka vishavxvidAyxlaya, dhAravADa, 1976\\
-103. & savAyxKAyxpaMcasholxVkiV\newline (keLadi basavarAja) &-& (saM) basavaliMga shAsitxrXV, enf.Arf. karibasavashAsitxrXV, meYsUru, 1912\\
-104. & sidAdhxMta shiKAmaNi\newline (shivayoVgi shivAcAyaR) &-& (saM) DA. caMdarxsheVKara shivAcAyaR mahAsAvxmigaLu, viVrasheYva sAhitayx saMshoVdhana maMDaLa, soVlApura, 1990\\
-%115. & sidAdhxMta shiKAmaNi (tatatxvX parxdiVpikA sahita)\newline (AMgAlxnuvAda - TipapxNi sahita) &-& DA. eM. shivakumArasAvxmi, sheYvaBArati shoVdha parxtiSAThxnamf, vArANasi, 1907\\
-%116. & sidAdhxMta shiKAmaNi\newline (soVsale reVvaNarAdhayxra sidAdhxMta boVdhiniV sahita) &-& (saM.) Di. sidadhxgaMgayayx, vijaya parxkAshana, lakekxVnahaLiLx, tumakUru, 2004\\
-%117. & sUkASxmXgama (hiMdiV anuvAda) &-& (saM) paM. varxjavalalxBadivxveVdi, sheYvaBArati shoVdha parxtiSAThxna, vArANasi, 1994\\
-105. & sUkASxmXgama (kananxDAnuvAda) &-& SaNumxKayayx akUkxramaTha, viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2001\\
-\hline
+{\bf 52. Ba.viV.BA.} & BagavadigxVtA viVrasheYvaBASayx &-& DA. Ti.ji. sidadhxpApxrAdhayx & baqhanamxTha,\newline citarxdugaR, 1935\\
+{\bf 53. } & BAratiVyadashaRna pariBASAkoVsha\newline (BA-1) &-& veYjAcnxnika matutx tAMtirxka shabAdxvaliV AyoVga & BArata sakARra, navadehali, 1999\\
+{\bf 54. makuTa.} & makuTAgama\newline (kirxyApAda-cayAR\-pAda)\newline (kananxDAnuvAda sahita) &-& (saM) DA. si. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 1998\\
+{\bf 55. ma.nA.u.} & mahAnArAyaNoVpaniSatf\newline (sheYvaBASayx sahita) &-& BASayxkAra. shirxV vaqSaBeVMdarx paMDita shivAcAyaR & vishAvxrAdhayx gurukula, kAshiV, 1959\\
+{\bf 56. mahoV.u.} & mahoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsa,\newline dehali, 1980\\
+{\bf 57. mAM.u.} & mAMDUkoyxVpaniSatf\newline (gwDapAdakArikoVpeVtA) &-& sAvxmi AdideVvAnaMda & shirxVrAmakaqSANxsharxma, meYsUru, 1984\\
+{\bf 58. muM.u.} & muMDakoVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxVrAmakaqSANxsharxma, meYsUru, 1957\\
+{\bf 59. maq.A.} & maqgeVMdArxgama\newline (shivAgama swraBAMtagaRta) &-& vidAvxnf eM.ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru, 1985\\
+{\bf 60. meYterxVya.} & meYterxVyoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 61. meYterxVya.} & meYterxVyuyxpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 62. } & yoVgashiKoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 63. ra.vaM.} & raGuvaMsha (kAlidAsa) &-& niNaRyasAgara perxsf & muMbayi, 1932\\
+{\bf 64. rudarx.jA.u.} & rudArxkaSxjAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 65. ru.u.} & rudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 66. ru.haq.u.} & rudarxhaqdayoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 67. liM.dhA.caM.} & liMgadhAraNacaMdirxkA\newline (naMdikeVshavxra shivAcAyaR) &-& paM. varxjavalalxBa divxveVdi & sheYvaBArati shoVdha parxtiSAThxna, vArANasi, 1988\\
+{\bf 68. liM.u.} & liMgoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 69. vA.A.} & vAtulAgama\newline (shivAgamaswraBa) &-& vidAvxnf eM.ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru, 1986\\
+{\bf 70. visheV.parx.} & visheVSAthaR parxkAshikA (mAyideVva)\newline (kananxDAnuvAda sahita) &-& (saM) paM. veY. nAgeVsha shAsitxrX & shirxV muruGAmaTha, dhAravADa, 1961\\
+{\bf 71. viV.mA.saM.} & viVramAheVshavxrAcAra saMgarxha : (BA-1)\newline (niVlakaMThanAganAthAcAyaR viracita) &-& (saM.) eM.esf. basavarAjayayx & pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1991\\
+{\bf 72. viV.dha.shi.} & viVrasheYvadhamaR shiroVmaNi\newline (kananxDa vAyxKAyx sahita) &-& (vAyx) eM. basavaliMga shAsitxrX & viVrasheYvagarxMtha parxkAshikA garxMthAvali, meYsUru, 1908\\
+{\bf 73. viV.sa.saM.} & viVrasheYva sadAcAra saMgarxha\newline (kananxDAnuvAda sahita) &-& (saM) paM. basavarAjashAsitxrXV pagaDadininxmaTha & shirxV jagadugxru garxMtha parxkAshikA garxMthAvali, mUrusAvira maTha, hubabxLiLx, 1964\\
+{\bf 74. viV.A.caM.} & viVrasheYvAnaMdacaMdirxkA (vAdakAMDa)\newline (maritoVMTadAyaR) &-& (saM) shirxV soVmeVshavxrashAsitxrXV & shirxV jagadugxru gaMgAdhara saMsakxqqta mahApAThashAlA, hubabxLiLx, 1936\\
+{\bf 75. viV.u.parx.} & viVrasheYvoVtakxSaRparxdiVpikA &-& hAlapaTaTxNada cenanxbasavasAvxmi & \hbox{shirxV duraduMDeVshavxra}\-maTha, arabAvi, beLagAvi jilelx, 1936\\
+{\bf 76. viV.parx.} & viVrasheYva parxdiVpikA &-& shirxV jayacAmarAjeVMdarx garxMthamAlA & meYsUru, 1918\\
+{\bf 77. viV.A.u.} & viVrAgamoVtatxramf (BAga-1) &-& (saM) DA. ecf.pi. malelxVdeVvaru & pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1988\\
+{\bf 78. } & viVrAgama (kananxDa vAyxKAyxna sahita) &-& (saM) DA. ja.ca.ni. & shirxV jagadugxru paMcAcAyaR seVvA saMGa, gadaga-beTageVri, 1962\\
+{\bf 79. viV.sheY.u.} & viVrasheYvoVpaniSatf &-& paM. kAshiVnAtha shAsitxrXV & paMcAcAyaR perxsf, meYsUru, 1981 (ELaneya Avaqtitx)\\
+{\bf 80. veV.sA.viV.caM.} & veVdAMtasAraviVrasheYva ciMtAmaNi\newline (utatxrakAMDa) - (niTUTxru naMja\-NAyaR) (marAThi anuvAda sahita) &-& (saM) shirxV malilxkAjuRna shAsitxrXV & shirxV datatx parxsAda siTxVmf perxsf, soVlApura, 1908\\
+{\bf 81. } & veYdika shivapUjA vidhi &-& paM. kAshiVnAtha shAsitxrXV & paMcAcAyaR mudarxNAlaya, meYsUru, 1980 (eMTaneya Avaqtitx)\\
+{\bf 82. } & shatakatarxyamf (mAyideVva) &-& paM. veY. nAgeVsha shAsitxrXV & muruGamaTha, dhAravADa, 1964\\
+{\bf 83. sha.u.} & sharaBoVpaniSatf\newline (upaniSatasxMgarxha) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasiV dAsf, dehali, 1970\\
+{\bf 84. sha.kw.} & shabAdxthaR kwsutxBa\newline (saMsakxqqta-kananxDa niGaMTu)\newline (BAga 1-6) &-& cakarxvatiR shirxVnivAsa rAjagoVpAlAcAyaR & bApokxV parxkAshana, beMgaLUru, 1999\\
+{\bf 85. sha.vi.da.} & shakitxvishiSATxdevxYta dashaRnamf &-& DA. Ti.ji. sidadhxpApxrAdhayx & gubibx shirxV cenanxbasaveVshavxra garxMthamAlA, meYsUru, 1934\\
+{\bf 86. } & shakitxvishiSATxdevxYta tatatxvXtarxya vimasheR\newline (kananxDAnuvAda) &-& DA. si. shivakumArasAvxmi & rAjayx patArxgAra ilAKe, (kanARTaka sakARra), beMgaLUru, 2009\\
+{\bf 87. shi.ta.ra.} & shivatatatxvXratAnxkara\newline (keLadi basava BUpAla) &-& pArxcayx vidAyx saMshoVdhanAlaya & meYsUru, BAga-1 (1964), BAga-2 (1969), BAga-3 (1975)\\
+{\bf 88. shi.yoV.parx.} & shivayoVga parxdiVpikA\newline (\hbox{cenanxsadAshiva\-yoVgi})\newline (kananxDA TiVkA sahita) &-& TiVkAkAra, basavArAdhayx & kananxDa adhayxyana piVTha, kanARTaka vishavxvidAyxlaya, dhAravADa, 1976\\
+{\bf 89. shi.maM.} & shivAdevxYtamaMjariV \hbox{(savxparxBAnaMda shivAcAyaR)}\newline (kananxDa vAyxKAyxnasahita) &-& shirxV rAmAnuja ayayxMgArf & paMcAcAyaR perxsf, meYsUru, 1929\\
+{\bf 90. shiva.shi.} & shivAdhikayxshiKAmaNi\newline (soVsale \hbox{reVvaNArAdhayx}) &-& (saM) shirxV soVmasheVKara sAvxmi & namaHshivAya maTha, meYsUru, 1929\\
+{\bf 91. shivA.sw.} & shivAgamaswraBa (kananxDa) &-& (saM) vidAvxnf eM.ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru, 1985\\
+{\bf 92. } & \hbox{sheYvadashaRna itihAsa matutx tatatxvXparxkAsha}\newline (BoVjarAja viracita) &-& (saM) vidAvxnf eM.ji. naMjuMDArAdhayx & parxboVdha garxMthamAlA, meYsUru, 1974\\
+{\bf 93. sheY.u.} & sheYvoVpaniSatf\newline {\small\rm (SAIVOPANISADS)} &-& (saM) paM. mahAdeVvashAsitxrXV & aDAyxrf leYbarxri, madArxsf, 1925\\
+{\bf 94. sheY.pa.} & sheYvapariBASA\newline (shivAgarxyoVgiVMdarxjAcnxna shivAcAyaR) &-& (saM) ecf.Arf. raMgasAvxmi ayayxMgArf & sakARri mudarxNAlaya, meYsUru, 1950\\
+{\bf 95. sheY.ra.} & \hbox{sheYvaratAnxkara (joyxVtinARtha)}\newline (BAga-1) &-& (saM) DA. si.enf. basavarAju & pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1992\\
+{\bf 96. sheY.ra.}  & \hbox{sheYvaratAnxkara (joyxVtinARtha)}\newline (BAga-2) &-& (saM) malilxkAjuRna shAsitxrXV & liMgi bArxhamxNa garxMthamAlA, soVlApura, 1909\\
+{\bf 97. sheY.si.diV.} & sheYvasidAdhxMtadiVpikA\newline (mAheVshavxra) &-& (saM) pi.Arf. karibasavashAsitxrXV & shaMkaravilAsa perxsf, meYsUru, 1907\\
+{\bf 98. shurxti.sA.} & shurxtisAraBASayx\newline (\hbox{shirxV shivapUjAshivaliMgashiva}\-yoVgiVMdarx) &-& (saM) DA. Ti.ji. sidadhxpApxrAdhayx & pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, 1913\\
+{\bf 99. shirxV.BA.} & shirxVkaraBASayx (shirxVpati paMDita) &-& (saM) DA. Ti.ji. sidadhxpApxrAdhayx & pArxcayx vidAyx saMshoVdhanAlaya, meYsUru (BAga-1, 1977), (BAga-2, 1978)\\
+{\bf 100. } & shevxVtAshavxtaroVpaniSatf\newline (viVrasheYvaBASoyxVpeVtA) &-& DA. Ti.ji. sidadhxpApxrAdhayx & shirxV muruGAmaTha, citarxdugaR, 1965\\
+{\bf 101. sa.u.} & sadAnaMdoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf, dehali, 1980\\
+{\bf 102. sa.da.saM.} & savaRdashaRnasaMgarxha\newline (mAdhavAcAyaR) &-& (saM) DA. imamxDi shivabasavasAvxmigaLu & kananxDa adhayxyana piVTha, kanARTaka vishavxvidAyxlaya, dhAravADa, 1976\\
+{\bf 103. sa.pa.sholxV.} & savAyxKAyxpaMcasholxVkiV\newline (keLadi basavarAja) &-& (saM) basavaliMga shAsitxrXV & enf.Arf. karibasavashAsitxrXV, meYsUru, 1912\\
+{\bf 104. si.shi.} & sidAdhxMta shiKAmaNi\newline (shivayoVgi shivAcAyaR) &-& (saM) DA. caMdarxsheVKara shivAcAyaR mahAsAvxmigaLu & viVrasheYva sAhitayx saMshoVdhana maMDaLa, soVlApura, 1990\\
+{\bf 105. sU.A.} & sUkASxmXgama (kananxDAnuvAda) &-& SaNumxKayayx akUkxramaTha & viVrasheYva anusaMdhAna saMsAthxna, beMgaLUru, 2001\\
+%\hline
 \end{longtable}}
 
 
